# bvc_mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: collect_now.py  deploy.bat  migrate_db.py  smoke_test.py
src/bvc_mcp/: __init__.py  analytics.py  auth.py  client.py  config.py  database.py  models.py  scheduler.py  server.py  utils.py  watchlist.py
src/bvc_mcp/ui/: widget.css  widget.html  widget.js
tests/: test_analytics.py  test_auth.py  test_client.py  test_database.py  test_watchlist.py
