[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bvc-mcp-server"
version = "0.1.0"
description = "MCP server exposing Casablanca Stock Exchange (BVC) market data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "bvc", "casablanca", "stock-exchange", "morocco", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "fastmcp==3.2.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "apscheduler==3.11.2",
    "pytz==2026.1.post1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "coverage[toml]>=7.0.0",
]

[project.scripts]
bvc-mcp-server = "bvc_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bvc_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
